Completed Buttons/Looks
moving on to the javascript and the lofic currently does not work

--- a/index.html
+++ b/index.html
@@ -311,6 +311,75 @@
 				<button type="button">+</button>
 			</div>
         </div>
+		<div class="widget" id="Endgame-Widget">
+			<h2>Endgame</h2>
+			<div class="mini-box">
+				<h3>END POSITION</h3>
+                <select id="End-Position">
+                    <option value="No Climb">No Climb</option>
+                    <option value="Failed Climb">Failed Climb</option>
+                    <option value="Parked">Parked</option>
+                    <option value="Onstage">Onstage</option>
+                    <option value="Spotlight">Spotlight</option>
+                </select>
+			</div>
+			<div class="mini-box">
+				<h3>HARMONY</h3>
+				<select id="Harmony">
+                    <option value="Not Completed">Not Completed</option>
+                    <option value="First On Chain">First On Chain</option>
+                    <option value="Second On Chain">Second On Chain</option>
+                    <option value="Third On Change">Third On Chain</option>
+                </select>
+			</div>
+		</div>
+		<div class="widget" id="PostMatch">
+			<h2>Postmatch</h2>
+			<div class="mini-box">
+				<h3>OFFENSIVE SKILL</h3>
+				<select id="Offensive Skill">
+                    <option value="Not Effective">Not Effective</option>
+                    <option value="Average">Average</option>
+                    <option value="Very Effective">Very Effective</option>
+                    <option value="Not Observed">Not Observed</option>
+                </select>
+			</div>
+			<div class="mini-box">
+			<h3>DEFENSIVE SKILL</h3>
+				<select id="Defensive Skill">
+                    <option value="Not Effective">Not Effective</option>
+                    <option value="Average">Average</option>
+                    <option value="Very Effective">Very Effective</option>
+                    <option value="Not Observed">Not Observed</option>
+                </select>
+			</div>
+			<div class="mini-box">
+			<h3>DIED</h3>
+			<div class="checkbox-container">
+                    <input type="checkbox" class="custom-checkbox" id="Died">
+                    <label for="Died"></label>
+			</div>
+            </div>
+			<div class="mini-box">
+			<h3>TIPPED OVER</h3>
+			<div class="checkbox-container">
+                    <input type="checkbox" class="custom-checkbox" id="Tipped-Over">
+                    <label for="Tipped-Over"></label>
+            </div>
+		</div>
+		<div class="mini-box">
+			<h3>CARD</h3>
+				<select id="Card">
+                    <option value="Yellow Card">Yellow Card</option>
+                    <option value="Red Card">Red Card</option>
+                    <option value="No Card">No Card</option>
+n>                </select>
+			</div>
+            <div class="mini-box">
+                <h3>COMMENTS</h3>
+                <input type="text" style="height: 168px;" id="Comments">
+            </div>
+		</div>
     </div>
 
     <div id="qr-code">
