--- a/index.html
+++ b/index.html
@@ -392,10 +392,10 @@ n>                </select>
 	
 	<div style="width: 100%; overflow: hidden;">
 		<div style="display: inline-block; float: left;">
-			<img src="assets/pictures/4063.png" style="display: block; margin-left: 0;" alt="4063 Logo">
+			<img src="assets/Pictures/4063.png" style="display: block; margin-left: 0;" alt="4063 Logo">
 		</div>
 		<div style="display: inline-block; float: right; margin-left: 10px;">
-			<img src="assets/pictures/Crescendo.png" style="height: 147px; width: 346px;" alt="Crescendo Logo">
+			<img src="assets/Pictures/Crescendo.png" style="height: 147px; width: 346px;" alt="Crescendo Logo">
 		</div>
 	</div>
 	<footer id="myFooter">
