--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
             margin-top: 0px;
 			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
         }
+		@keyframes buttonPress {
+            0% { transform: scale(1); }
+            50% { transform: scale(0.90); }
+            100% { transform: scale(1); }
+        }
+		button:hover {
+			filter: grayscale(20%);
+		}
+        button:active {
+            animation: buttonPress 0.2s linear;
+        }
         /* Popup styling */
         .popup {
             display: none;
@@ -402,6 +413,8 @@ n>                </select>
 
     <!-- Submit Info Button -->
     <button id="submit-button" onclick="updateQRCodeOnSubmit()">Submit Info</button>
+    <button id="submit-button" onclick="ClearAll()">Clear All</button>
+	
 	
 	<div style="width: 100%; overflow: hidden;">
 		<div style="display: inline-block; float: left;">
@@ -463,6 +476,67 @@ n>                </select>
 		
 			
             }
+		function ClearAll() {
+			document.getElementById('prematch-scout-initials').value = '';
+			document.getElementById('prematch-match-number').value = '';
+			document.getElementById('prematch-robot').value = 'Red 1';
+			document.getElementById('prematch-team-number').value = '';
+			document.getElementById('prematch-human-player').checked = false;
+			document.getElementById('prematch-no-show').checked = false;
+			document.getElementById('Mobility').checked = false;
+			document.getElementById('Died').checked = false;
+			document.getElementById('Tipped-Over').checked = false;
+			document.getElementById('Coopertition').checked = false;
+			document.getElementById('Spotlight').checked = false;
+			document.getElementById('End-Position').value = 'No Climb';
+			document.getElementById('Harmony').value = 'Not Completed';
+			document.getElementById('Offensive Skill').value = 'Not Effective';
+			document.getElementById('Defensive Skill').value = 'Not Effective';
+			document.getElementById('Card').value = 'Yellow Card';
+			document.getElementById('Comments').value = '';
+			
+			gameData.initials = '';
+			gameData.matchNum = 0;
+			gameData.robot = 'Red 1';
+			gameData.teamNum = 0;
+			gameData.humanAtAmp = false;
+			gameData.noShow = false;
+			gameData.mobility = false;
+			gameData.died = false;
+			gameData.tippedOver = false;
+			gameData.coopertition = false;
+			gameData.endPos = 'No Climb';
+			gameData.harmony = 'Not Completed';
+			gameData.offSkill = 'Not Effective';
+			gameData.defSkill = 'Not Effective';
+			gameData.card = 'Yellow Card';
+			gameData.comments = '';
+			gameData.ampScored = 0;
+			gameData.ampMissed = 0;
+			gameData.speakerScored = 0;
+			gameData.speakerMissed = 0;
+			gameData.autoFoul = 0;
+			gameData.tampScored = 0;
+			gameData.tampMissed = 0;
+			gameData.tspeakerScored = 0;
+			gameData.tspeakerMissed = 0;
+			gameData.noteTrap = 0;
+			gameData.teleopFoul = 0;
+
+			document.getElementById('ampScored').textContent = gameData.ampScored;
+			document.getElementById('ampMissed').textContent = gameData.ampMissed;
+			document.getElementById('speakerScored').textContent = gameData.speakerScored;
+			document.getElementById('speakerMissed').textContent = gameData.speakerMissed;
+			document.getElementById('autoFoul').textContent = gameData.autoFoul;
+			document.getElementById('tampScored').textContent = gameData.tampScored;
+			document.getElementById('tampMissed').textContent = gameData.tampMissed;
+			document.getElementById('tspeakerScored').textContent = gameData.tspeakerScored;
+			document.getElementById('tspeakerMissed').textContent = gameData.tspeakerMissed;
+			document.getElementById('noteTrap').textContent = gameData.noteTrap;
+			document.getElementById('teleopFoul').textContent = gameData.teleopFoul;
+
+		}
+
 
         function updateButtonNum(variable, value) {
     gameData[variable] += value;
@@ -473,12 +547,11 @@ n>                </select>
     }
     // Update HTML element value
     document.getElementById(variable).textContent = gameData[variable];
-}
-
 
         function updateGameData(section, key, value) {
             gameData[section][key] = value;
         }
+		}
 		
         function updateQRCodeOnSubmit() {
 		// Update all the gameData fields with the form values
