Updated clear all added button animatiojns
added button animations and hover animations.
updated clear all to clear the error on required

--- a/index.html
+++ b/index.html
@@ -534,6 +534,9 @@ n>                </select>
 			document.getElementById('tspeakerMissed').textContent = gameData.tspeakerMissed;
 			document.getElementById('noteTrap').textContent = gameData.noteTrap;
 			document.getElementById('teleopFoul').textContent = gameData.teleopFoul;
+			teamNumInput.classList.remove('error');
+			matchNumInput.classList.remove('error');
+			initialsInput.classList.remove('error');
 
 		}
 
