--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             color: #FF69B4;
             font-size: 64px;
             margin: 20px;
+			text-shadow: 0 4px 8px rgba(255, 105, 180, .7);
+			letter-spacing: 5px;
         }
 		h2 {
 			margin: 10px;
@@ -49,14 +51,14 @@
             width: 275px;
 			height: 625px;
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            box-shadow: 5 4px 8px rgba(0, 0, 0, 0.2);
         }
         .mini-box {
             margin: 10px;
             padding: 0px;
             border-radius: 5px;
             background-color: #ffffff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 40px 80px rgba(0, 0, 0, 0.1);
 			flex-direction: column;
         }
         h3 {
@@ -116,10 +118,10 @@
             cursor: pointer;
             border: 2px solid black;
             border-radius: 5px;
-            background-color: #ff0000;
+            background-color: #5f59ff;
             color: #ffffff;
             margin-top: 0px;
-			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+			box-shadow: 0 40px 80px rgba(95, 89, 255, 0.6);
         }
 		@keyframes buttonPress {
             0% { transform: scale(1); }
