--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         .widget {
             margin: 20px;
             padding: 10px;
-            background: linear-gradient(to top, #f5f5f5 1%, #FF69B4 100%);
+            background: linear-gradient(to top, #ffffff 1%, #FF69B4 100%);
             width: 275px;
 			height: 625px;
             border-radius: 10px;
